--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h2>Contents:</h2>
         
         <ol>
-            <li><a href id="#chocolate-cake">Chocolate Cake</a></li>
-            <li><a href id="#tiramisu">Tiramisu</a></li>
-            <li><a href id="#brownie">Brownies</a></li>
+            <li><a href="#chocolate-cake">Chocolate Cake</a></li>
+            <li><a href="#tiramisu">Tiramisu</a></li>
+            <li><a href="#brownie">Brownies</a></li>
         </ol>
         
         <!--Ends Here-->
