--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project: Recipe book</title>
+        <title>Recipe Book for Desserts</title>
         <meta charset="utf-8">
         
         <!--Web Page Style Start Right Here-->
