--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <!--Chocolate Cake Recipe Starts-->
         <h2 id="chocolate-cake">Chocolate Cake</h2>
-        <img src="https://images.media-allrecipes.com/userphotos/720x405/708879.jpg" alt="A Delicious Chocolate Cake!" height:200px>
+        <img src="https://images.media-allrecipes.com/userphotos/720x405/708879.jpg" alt="A Delicious Chocolate Cake!" height:"200">
         
         <ul>
             <li>Time:1 hour</li>
