--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
         </ul>
         
-        <table class="ingredients-list" <img src="https://images.media-allrecipes.com/userphotos/720x405/708879.jpg" alt="A Delicious Chocolate Cake!" height:"50">
+        <table class="ingredients-list" <img src="https://images.media-allrecipes.com/userphotos/720x405/708879.jpg" alt="A Delicious Chocolate Cake!" height:"50">>
 
             <thead>
                 <tr>
