--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Calculator by Menekşe Perk</title>
         <meta charset="utf-8">
+    </head>
+    <body>
         <body bgcolor= "#000000" text= "gold">
 <form name="calculator" >
 <input type="button" value="1" onClick="document.calculator.ans.value+='1'">
