--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta charset="utf-8">
     </head>
     <body>
-<body bgcolor= "#lavender" text= "gold">
+<body bgcolor= "RGB(224, 255, 255)" text= "gold">
+    
+    
 <form name="calculator" >
 <input type="button" value="1" onClick="document.calculator.ans.value+='1'">
 <input type="button" value="2" onClick="document.calculator.ans.value+='2'">
