--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-<body color= "RGB(0, 0, 255)"text= "gold">
+<body color= "RGB(248,248,255)"text= "gold">
 <form name="calculator" >
 <input type="button" value="1" onClick="document.calculator.ans.value+='1'">
 <input type="button" value="2" onClick="document.calculator.ans.value+='2'">
