--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
 <body color= "RGB(173,216,230)"text= "gold">
 <form name="calculator" >
+<input type="button" value="0" onClick="document.calculator.ans.value+='0'">
 <input type="button" value="1" onClick="document.calculator.ans.value+='1'">
 <input type="button" value="2" onClick="document.calculator.ans.value+='2'">
 <input type="button" value="3" onClick="document.calculator.ans.value+='3'">
@@ -20,10 +21,10 @@
 <input type="button" value="+" onClick="document.calculator.ans.value+='+'">
 <input type="button" value="*" onClick="document.calculator.ans.value+='*'">
 <input type="button" value="/" onClick="document.calculator.ans.value+='/'">
- <input type="button" value="0" onClick="document.calculator.ans.value+='0'">
-<input type="reset" value="Reset">
+<input type="Sıfırla" value="Reset">
+<input type="Sil" value="Delete>
 <input type="button" value="=" onClick="document.calculator.ans.value=eval(document.calculator.ans.value)">
-<br>Solution is <input type="textfield" name="ans" value="">
+<br>Sonuç<input type="textfield" name="ans" value="">
 </form>
 </body>            
     </head>
