--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <input type="button" value="+" onClick="document.calculator.ans.value+='+'">
 <input type="button" value="*" onClick="document.calculator.ans.value+='*'">
 <input type="button" value="/" onClick="document.calculator.ans.value+='/'">
-<input type="Sıfırla" value="Reset">
+<input type="Reset" value="Reset">
 <input type="button" value="=" onClick="document.calculator.ans.value=eval(document.calculator.ans.value)">
 <br>Sonuç<input type="textfield" name="ans" value="">
 </form>
